styles.css
/* ... */
.openstudio-orderpost-item-book.openstudio-orderpost-item-moveup-button span.openstudio-folder-reorder-disabled,
.openstudio-orderpost-item-book.openstudio-orderpost-item-movedown-button span.openstudio-folder-reorder-disabled,
.openstudio-orderpost-item-book.openstudio-orderpost-item-moveup-button:disabled span.openstudio-folder-reorder-disabled,
.openstudio-orderpost-item-book.openstudio-orderpost-item-movedown-button:disabled span.openstudio-folder-reorder-disabled {
    display: none;
}

.openstudio-orderpost-item-moveup-button:disabled span.openstudio-folder-reorder-active,
.openstudio-orderpost-item-movedown-button:disabled span.openstudio-folder-reorder-active {
    display: none;
}

.openstudio-orderpost-item-moveup-button:disabled span.openstudio-folder-reorder-disabled,
.openstudio-orderpost-item-movedown-button:disabled span.openstudio-folder-reorder-disabled {
    display: block;
}

.openstudio-orderpost-item-moveup-button span.openstudio-folder-reorder-disabled,
.openstudio-orderpost-item-movedown-button span.openstudio-folder-reorder-disabled {
    display: none;
}

.openstudio-orderpost-item-moveup-button img,
.openstudio-orderpost-item-movedown-button img {
    width: 22px;
    cursor: pointer;
}

.openstudio-orderpost-item-order {
    margin: 0 auto;
    width: 25px;
    text-align: center;
    margin-right: 3px;
}

.openstudio-orderpost-item-locked {
    text-align: center;
    margin-left: 6px;
}

.openstudio-orderpost-item-locked img {
    height: 14px;
    width: auto;
}

.openstudio-orderpost-item-picture {
    overflow: hidden;
}

.path-mod-openstudio .openstudio-orderpost-item-order-number-input {
    width: 17px;
    height: 17px;
    padding: 2px;
    margin-bottom: 0;
    font-size: 0.857em;
    text-align: center;
}

.openstudio-orderpost-item-name {
    display: block;
    font-weight: bold;
    font-size: 1em;
    line-height: 22px;
    margin-top: -7px;
}

.openstudio-orderpost-item-date {
    display: block;
    font-size: 0.857em;
    margin-top: -4px;
}

.openstudio-orderpost-item-ordernumber-guide {
    font-size: 1em;
    padding-right: 4px;
}

#page-mod-openstudio-folder #id_orderpost {
    margin-right: 0;
}

/**
 * End folder - Order post
 */

/**
 * Folder - Activity guidance
 */

.openstudio-folder-activity-guidance {
    display: none;
}

.openstudio-folder-view-hasguidance {
    float: right;
}

.openstudio-activity-guidance-item {
    display: table;
    width: 100%;
    border-top: 1px solid #dfdfdf;
    padding: 4px 0 13px 0px;
    display: block;
}

div.openstudio-activity-guidance-item:nth-of-type(odd) {
    border-top: 1px solid #dfdfdf;
}

.openstudio-activity-guidance-item:last-child {
    border-bottom: 1px solid #dfdfdf;
}

.openstudio-activity-guidance-item-row {
    margin-bottom: 10px;
}

.openstudio-activity-guidance-item-row > div {
    display: table-cell;
    vertical-align: top;
}

.openstudio-activity-guidance-item-column1 {
    width: 52px;
    padding-top: 11px;
}

.openstudio-activity-guidance-item-column2 {
    width: 64px;
    padding-top: 11px;
}

.openstudio-activity-guidance-item-column3 {
    padding: 6px 9px 0 9px;
    font-weight: bold;
}

.openstudio-activity-guidance-item-order {
    margin: 0 auto;
    width: 23px;
    height: 23px;
    line-height: 24px;
    border: 1px solid #dfdfdf;
    text-align: center;
    margin-right: 10px;
}

.openstudio-activity-guidance-item-upload-container {
    margin: 0 auto;
    width: 62px;
    height: 42px;
    border: 1px solid #dfdfdf;
    text-align: center;
}

.openstudio-activity-guidance-item-upload-icon {
    width: 32px;
    margin-top: 5px;
}

.openstudio-activity-guidance-item-content {
    line-height: 20px;
    padding: 0px 15px;
}

.openstudio-activity-guidance-item-content > p {
    margin: 0px;
}

#page-mod-openstudio-folder .openstudio-activity-guidance-item-content .atto_image_button_text-top.img-responsive,
#page-mod-openstudio-folder .openstudio-activity-guidance-item-content .atto_image_button_middle.img-responsive,
#page-mod-openstudio-folder .openstudio-activity-guidance-item-content .atto_image_button_text-bottom.img-responsive {
    width: 100%;
    margin-top: 5px;
}

#page-mod-openstudio-folder #id_activity_guidance {
    margin-right: 6px;
}

/**
 * End folder - Activity guidance
 */

/**
 * Import feature
 */

.openstudio-import-header {
    margin-top: 27px;
    padding-top: 9px;
    border-top: 1px solid #dfdfdf;
    margin-bottom: 26px;
}
.openstudio-import-header h2 {
    font-size: 1.57em;
    font-weight: bold;
}

.openstudio-import-form label[for="id_importfile"] {
    font-weight: bold;
}

.openstudio-import-form .mform .iconhelp {
    margin-left: 0px;
}

.openstudio-import-form #fitem_id_importcontents {
    margin-top: 40px;
    margin-bottom: 63px;
}

.openstudio-import-form .fp-restrictions {
    display: none;
}

.openstudio-import-error {
    text-align: right;
    color: red;
}

/**
 * End import feature
 */

/**
 * Common dialogue
 */

/* Common dialog header */

.path-mod-openstudio .moodle-dialogue-base .openstudio-dialogue .moodle-dialogue-wrap .moodle-dialogue-hd,
.path-mod-openstudio .moodle-dialogue-base .openstudio-dialogue .moodle-dialogue-wrap .moodle-dialogue-hd.yui3-widget-hd,
.path-mod-openstudio .modal-container .modal .modal-header {
    height: 46px;
    padding: 0px;
}

.path-mod-openstudio .moodle-dialogue-base .openstudio-dialogue .moodle-dialogue-hd span:first-child,
.path-mod-openstudio .modal-container .modal .modal-header h3 {
    padding: 11px 15px;
    display: inline-block;
}

.path-mod-openstudio .moodle-dialogue-base .openstudio-dialogue .yui3-button.closebutton {
    padding: 1px 3px 3px 3px;
    margin: 0px 9px 0px 9px;
}

.path-mod-openstudio .moodle-dialogue-base .openstudio-dialogue .yui3-button.closebutton:before {
    height: 30px;
    display: block;
}

/* Common dialog body */
.path-mod-openstudio .moodle-dialogue-base .openstudio-dialogue .moodle-dialogue-bd {
    padding: 13px 15px 3px;
}
/* ... */

